fixed top value for non mobile devices

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,7 +36,7 @@ $tablet: 641px;
     border: 4px solid $black;
     background-color: $white;
     @media screen and (min-width: $tablet) {
-      top: -15px;
+      top: -10px;
       left: auto;
       right: auto;
     }
